Minor Timestamp cleanup.